<resources>
    <string name="app_name">NeedToFeed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_home">Home</string>
    <string name="title_orders">Orders</string>
    <string name="title_profile">Profile</string>
    <string name="welcome_screen_subtitle">Save · Eat · Repeat</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_log_in">Log In</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="terms_privacy_agreement"><![CDATA[By registering, you agree to our <a href="https://www.termsfeed.com/live/192616dc-455a-44ca-9d2b-c2f9f299b2b5">Terms & Conditions</a> and <a href="https://www.termsfeed.com/live/244ef7f2-8a96-4e3f-9db6-5058825e1b6d">Privacy Policy</a>.]]></string>
    <string name="lbl_forgot_password">Forgot Password? Click Here</string>
    <string name="title_register_confirm">Confirm Registration</string>
    <string name="register_confirm_prompt">Please enter the verification code sent to the email address you provided to complete your account registration</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="lbl_register_confirm">Confirm</string>
    <string name="title_reset_password">Reset Password</string>
    <string name="reset_password_prompt">Enter the email associated with your account to receive a password reset code</string>
    <string name="lbl_reset_password">Reset Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="reset_password_confirm_prompt">A password reset link has been\nsent to your email.\n\nPlease verify your account and enter your new password below</string>

    <string name="restaurants_unavailable">Oh no!\nNo restaurants available near you</string>
    <string name="item_details_quantity">Quantity:</string>
    <string name="add_to_cart_string">Add to cart</string>
    <string name="lbl_checkout_your_info">Your Information</string>
    <string name="lbl_checkout_delivery_instructions">Delivery Instructions</string>
    <string name="lbl_checkout_your_order">Your order</string>
    <string name="lbl_total">Total</string>
    <string name="lbl_tip">Tip</string>
    <string name="lbl_tax">Tax</string>
    <string name="lbl_delivery_fee">Delivery Fee</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_checkout_action">Check Out</string>
    <string name="btn_view_cart">View Cart</string>
    <string name="btn_add_to_order">+ Add more items</string>
    <string name="profile_name_description">Name</string>

    <string name="googlepay_button_content_description">Google Pay</string>
    <string name="checkout_with_googlepay_button_content_description">Checkout With Google Pay</string>
    <string name="order_cart_header_title">My Bag</string>
    <string name="lbl_checkout_est_time">Estimated time: </string>
    <string name="lbl_contact_info_title">Contact Info</string>
    <string name="lbl_contact_option_title">Contact-free Delivery</string>
    <string name="lbl_contact_option_body">Select this option and the driver will drop off your order, then notify you.</string>
    <string name="lbl_delivery_address_title">Delivery Address</string>
    <string name="lbl_courier_notes_title">Notes for your Courier</string>
    <string name="mapbox_public_key">pk.eyJ1IjoibWRhZGkxMTMwIiwiYSI6ImNreGJhdm9vNTQ0MjEybnJubmt6OGxnYzMifQ.RQ8UMi1-Z2pwxAh6UDx4XQ</string>

    <string name="personal_infor_btn_string">Personal Information</string>
    <string name="settings_btn_string">Settings</string>
    <string name="signout_btn_string">Sign out</string>
    <string name="name_lbl_title_string">Name</string>
    <string name="email_lbl_title_string">Email</string>
    <string name="password_lbl_title_string">Password</string>
    <string name="address_lbl_title_string">Address</string>
    <string name="phone_number_lbl_title_string">Phone Number</string>
    <string name="push_notifications_lbl_title_string">Push Notifications</string>
    <string name="help_lbl_title_string">Help/Contact</string>
    <string name="payment_lbl_title_string">Payment</string>
    <string name="logout_lbl_title_string">Logout</string>

    <string name="lbl_switch_to_pickup_prompt">Switch to Pickup</string>
    <string name="lbl_phone_number">Phone Number</string>
    <string name="courier_notes_hint">Add special instructions for a smooth delivery</string>
    <string name="lbl_restaurants_current_location">Now · </string>
    <string name="lbl_restaurants_location_address_placeholder">Current Location</string>
    <string name="lbl_recent_locations">Recent Locations</string>
    <string name="lbl_deliver_now">Deliver Now</string>
    <string name="lbl_nearby">Nearby</string>
    <string name="lbl_order_details">Order Details</string>
    <string name="order_details_btn_schedule">Schedule</string>
    <string name="lbl_unavailable">Unavailable</string>
    <string name="checkout_estimated_time_default_value">35-45 minutes</string>
    <string name="account_settings_header">Account Settings</string>
    <string name="name_setting">Your Name</string>
    <string name="phone_number_setting">Phone Number</string>
    <string name="email_setting">Email</string>
    <string name="addresses_setting">Addresses</string>
    <string name="payment_settings_header">Payment Settings</string>
    <string name="edit_name_lbl_string">Full Name</string>
    <string name="save_lbl_title_string">Save</string>
    <string name="current_password_lbl_string">Current Password</string>
    <string name="new_password_lbl_string">New Password</string>
    <string name="img_splash_logo_content_desc">NeedToFeed Logo</string>
    <string name="ntf_phonenumber">(914) 867-5309</string>
    <string name="contact_header">Need Help? Get In Touch</string>
    <string name="holy_text">According to all known laws of aviation, there is no way a bee should be able to fly.
        Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway because bees dont
        care what humans think is impossible. Yellow, black. Yellow, black. Yellow, black. Yellow, black. Ooh, black and yellow!
        Lets shake it up a little. Barry! Breakfast is ready! Coming! Hang on a second. Hello? Barry? Adam? Can you believe this is happening?
        I cant. Ill pick you up. Looking sharp. Use the stairs. Your father paid good money for those.</string>
    <string name="ntf_icon_desc">NeedToFeed Icon</string>
    <string name="ntf_email">NeedToFeedApp@gmail.com</string>
    <string name="about_us">About Us</string>
    <string name="btn_track_order">Track Order</string>
    <string name="checkout_edit_lbl_name">Your name</string>
    <string name="checkout_edit_action_add_phone">Add a new phone number</string>
    <string name="checkout_edit_btn_update_info">Update Info</string>
    <string name="hint_phone">Enter your phone number</string>
    <string name="lbl_action_make_default">Make default</string>
    <string name="text_phone_consent"><![CDATA[By providing your phone number, you consent to receive text messages from NeedToFeed related to your order.\nStandard message rates may apply. See our Terms & Conditions for more information.]]></string>
    <string name="lbl_save">Save</string>
    <string name="hint_street_address">Address *</string>
    <string name="hint_address_apartment">Apt / Suite #</string>
    <string name="hint_address_city">City *</string>
    <string name="hint_address_zip_code">Postal code *</string>
    <string name="hint_address_cross_street">Cross street</string>
    <string name="hint_address_delivery_instructions">Delivery Instructions</string>
    <string name="hint_address_label">Label *</string>
    <string name="lbl_required_hint">* required</string>
    <string name="lbl_action_add_address">Add a new address</string>
    <string name="lbl_loading">Please wait...</string>

    <string-array name="states_array">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
</resources>
