<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/account_settings_header">

        <EditTextPreference
            app:key="name"
            app:title="@string/name_setting"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="phoneNumber"
            app:title="@string/phone_number_setting"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="email"
            android:title="@string/email_setting"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            android:key="address"
            android:title="@string/addresses_setting"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            android:key="password"
            android:title="Password"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/payment_settings_header"/>





</PreferenceScreen>
