<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title_reset_password"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textAlignment="center"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/reset_password_confirm_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_reset_password"
        android:src="@drawable/ic_baseline_check_circle_outline_24"/>

    <TextView
        android:id="@+id/reset_password_confirm_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/title_reset_password"
        android:text="@string/reset_password_confirm_prompt"
        android:textAlignment="center"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/reset_password_confirm_input_code"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_confirm_prompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp"
        android:background="@drawable/rounded_button_transparent"
        android:hint="@string/hint_verification_code"
        android:inputType="number" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/reset_password_confirm_new_password"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_confirm_input_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp"
        android:background="@drawable/rounded_button_transparent"
        android:hint="@string/hint_new_password"
        android:inputType="textPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_reset_password_confirm"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_confirm_new_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_button_purple"
        android:text="@string/lbl_register_confirm"/>
</androidx.constraintlayout.widget.ConstraintLayout>
