<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.auth.ForgotPasswordFragment">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_reset_password_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="32dp"
        android:background="@null"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"/>

    <TextView
        android:id="@+id/title_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-6dp"
        app:layout_constraintStart_toEndOf="@+id/btn_reset_password_back"
        app:layout_constraintTop_toTopOf="@+id/btn_reset_password_back"
        android:text="@string/title_reset_password"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textAlignment="center"
        android:gravity="center"/>

    <TextView
        android:id="@+id/reset_password_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@+id/title_reset_password"
        android:text="@string/reset_password_prompt"
        android:textAlignment="center"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/reset_password_input_email"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_prompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp"
        android:background="@drawable/rounded_button_transparent"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_reset_password"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_input_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_button_black"
        android:text="@string/lbl_reset_password"
        android:textColor="@color/white"/>
</androidx.constraintlayout.widget.ConstraintLayout>
