<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterFragment">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_register_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="32dp"
        android:background="@null"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"/>

    <TextView
        android:id="@+id/title_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-6dp"
        app:layout_constraintStart_toEndOf="@+id/btn_register_back"
        app:layout_constraintTop_toTopOf="@+id/btn_register_back"
        android:text="@string/lbl_register"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textAlignment="center"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/register_input_full_name"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="8dp"
        android:background="@drawable/rounded_button_transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_register"
        android:hint="@string/hint_full_name"
        android:inputType="textPersonName"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/register_input_email"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="8dp"
        android:background="@drawable/rounded_button_transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_input_full_name"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/register_input_password"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="8dp"
        android:background="@drawable/rounded_button_transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_input_email"
        android:hint="@string/hint_password"
        android:inputType="textPassword"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_button_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_input_password"
        android:text="@string/lbl_register"
        android:textColor="@color/white"/>

    <LinearLayout
        android:id="@+id/register_social_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_register_google"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:layout_marginEnd="100dp"
            android:src="@drawable/google_logo"
            android:background="@null"/>
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_register_facebook"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="fitXY"
            android:src="@drawable/facebook_logo"
            android:background="@null"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_terms_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/register_social_linear_layout"
        android:text="@string/terms_privacy_agreement"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"/>
</androidx.constraintlayout.widget.ConstraintLayout>
